No effective change, format only